2000-08-25  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 04.

2000-08-25  Yagi Tatsuya  <yagi@is.titech.ac.jp>
            Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/nntp.el (nntp-list-options, nntp-options-subscribe,
	nntp-options-not-subscribe): New server variables.
	(nntp-request-list): Use them.
	* text/gnus.texi, texi/gnus-ja.texi: Update for them.

2000-08-23  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus.el (gnus-group-startup-message): Use `image-size' to
	simplify the program.

	* lisp/gnus-group.el (gnus-group-rename-group): Inhibit renaming of
	zombie or killed groups.

2000-08-21  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/nnheader.el (nnheader-replace-chars-in-string): Use
	`static-if'.
	* lisp/message.el (message-replace-chars-in-string): Ditto.

2000-08-19  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* lisp/nnshimbun.el (nnshimbun-type-definition): Follow changes of
	ZDNet.
	(nnshimbun-make-text-or-html-contents): Ditto.
	(nnshimbun-make-html-contents): Ditto.

2000-08-18  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>
            Akihiro Arisawa  <ari@atesoft.advantest.co.jp>

	* lisp/nnshimbun.el: Add `mew' and `xemacs' support.

2000-08-17  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/dgnushack.el (dgnushack-texi-format): Require `ptexinfmt'
	instead of `texinfmt'.
	(dgnushack-install-package): Don't install ptexinfmt.el.
	(dgnushack-make-package): Don't include ptexinfmt.el in MANIFEST.
	(dgnushack-compile): Don't compile dgnushack.el nor ptexinfmt.el.
	(dgnushack-unexported-files, dgnushack-tool-files): New constants.

	* lisp/Makefile.in (install-package): No need to remove
	dgnushack.elc.
	(install): Don't install ptexinfmt.el; no need to remove
	dgnushack.elc.

	* lisp/ptexinfmt.el: New file imported from Wanderlust.

2000-08-09  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/nntp.el (nntp-open-telnet): Wait for the telnet prompt